kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp-service-service
  labels:
    app: ftp-service-service
spec:
  type: NodePort
  selector:
    app: ftp-service-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
      nodePort: 30001
