kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftp-service-service
spec:
  rules:
    - host: ftp-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ftp-service-service
                port:
                  number: 8082
